# nonprofit-revenue-scraper

./: .gitignore  CLAUDE.md  EXPECTED_OUTPUT.md  LICENSE  README.md  async_nonprofit_scraper.py  form_990_parser.py  gemini_pdf_parser.py  launch_with_monitor.py  nonprofit_data_scraper.py  pyproject.toml  requirements.txt  scraper_launcher.py  scraper_monitor.py  simple_990_scraper.py
.streamlit/: config.toml
src/nonprofit_benchmark/: benchmark.py  bmf.py  cli.py  db.py  efile_cache.py  efile_fetch.py  efile_index.py  efile_reconcile.py  efile_sync.py  efile_xml.py  excel_export.py  expansion.py  extraction.py  filing_selector.py  gemini_parser.py  models.py  parse_scheduler.py  pdfs.py  propublica.py  throttle.py
src/nonprofit_benchmark/dashboard/: app.py
tests/: test_benchmark.py  test_bmf_seed.py  test_cli.py  test_efile_index.py  test_efile_reconcile.py  test_efile_sync.py  test_efile_xml.py  test_excel_export.py  test_expansion.py  test_fetch.py  test_filing_selector.py  test_gemini_parser.py  test_org_lookup.py  test_parse.py  test_parse_cli.py  test_parse_scheduler.py  test_pdf_download.py  test_peer_query.py  test_propublica_client.py  test_throttle.py
tests/fixtures/: bmf_ny_malformed.csv  bmf_ny_sample.csv
