[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nonprofit-benchmark"
version = "0.1.0"
description = "Executive compensation benchmarking platform for nonprofits (990 data pipeline + dashboard)"
requires-python = ">=3.12"
dependencies = [
    "google-generativeai>=0.8",
    "openpyxl>=3.1",
    "pydantic>=2",
    "requests>=2.32",
    "sqlalchemy>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]
dashboard = [
    "streamlit>=1.30",
]

[project.scripts]
pipeline = "nonprofit_benchmark.cli:entrypoint"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
